# chibicpp

./: .gitignore  CMakeLists.txt  README.md  tmp  tmp.s  tmp2.s
script/: test.sh
src/: CMakeLists.txt
src/adt/: small_vector.cc
src/ast/: CMakeLists.txt  node.cc  type.cc
src/codegen/: CMakeLists.txt  backend.cc
src/include/chibicpp/adt/: bit.hh  dense_map.hh  dense_map_info.hh  small_vector.hh  twine.hh
src/include/chibicpp/ast/: ast_context.hh  context.hh  node.hh  node_dump.hh  type.hh  visitor.hh
src/include/chibicpp/codegen/: backend.hh  interpreter.hh
src/include/chibicpp/common/: error.hh  macro.hh
src/include/chibicpp/ir/: derived_type.hh  value.hh
src/include/chibicpp/lex/: token.hh  tokenizer.hh
src/include/chibicpp/parser/: parser.hh  scope.hh  symbol_table.hh
src/include/chibicpp/support/: casting.hh  math.hh  math_extras.hh  mem_alloc.hh  observer_ptr.hh  pointer_like_type_traits.hh  type_traits.hh
src/include/chibicpp/util/: epoch_tracker.hh  file_util.hh  stack_trace.hh
src/lex/: CMakeLists.txt  tokenizer.cc
src/main/: CMakeLists.txt  chibicpp.cc
src/parser/: CMakeLists.txt  parser.cc  scope.cc  symbol_table.cc
src/support/: mem_alloc.cc
src/util/: CMakeLists.txt  file_util.cc  stack_trace.cc
test/: CMakeLists.txt
test/ast/: CMakeLists.txt  type_test.cc
test/lex/: CMakeLists.txt  tokenizer_test.cc
test/parser/: CMakeLists.txt  lexer_test.cc  parser_test.cc  scope_test.cc  tokenizer_test.cc
test/unittest/: CMakeLists.txt  tests
test/util/: CMakeLists.txt  observer_ptr_test.cc
